# larrecodnn

./: .gitignore
larrecodnn/: NuGraphAnalyzer_module_scrappy.cc  NuGraphInference_module_zombie_Tyler.cc  newDict.txt  oldDict.txt
larrecodnn/CVN/func/: classes_def.xml
larrecodnn/NuGraph/: .NuGraphAnalyzer_module.cc.swp  CMakeLists.txt  LinkDef.h  MyDict_rdict.pcm  NuGraphAnalyzer_module.cc  NuGraphAnalyzer_module_Will.cc  NuGraphInference_module_DONOTTOUCH_WILL.cc  NuSliceHitsProducer_module.cc  checksum.c  classes.h  classes_def.xml  model.pt  nugraph.fcl  test.fcl  testinference_uB_slice_job.fcl
